--- a/navigation_time_challenge13/pubspec.yaml
+++ b/navigation_time_challenge13/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.8.0
   image_picker: ^1.1.2
+  flex_color_scheme: ^8.1.0
 
 dev_dependencies:
   flutter_test:
