--- a/navigation_time_challenge13/pubspec.yaml
+++ b/navigation_time_challenge13/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   image_picker: ^1.1.2
   flex_color_scheme: ^8.1.0
+  go_router: 6.0.2
+  shared_preferences: ^2.5.2
+  provider: 6.0.5
 
 dev_dependencies:
   flutter_test:
