--- a/navigation_time_challenge13/pubspec.yaml
+++ b/navigation_time_challenge13/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flex_color_scheme: ^8.1.0
   go_router: 6.0.2
   shared_preferences: ^2.5.2
-  provider: 6.0.5
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
